2006-02-25  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Added "zh_HK" to ALL_LINGUAS.
	
2006-02-13  Thomas Wood  <thos@gnome.org>

	* configure.in:
	* NEWS:
	Updated for 2.13.91

	* AUTHORS
	* branded/gnome-branded.xml.in.in:
	* nature/gnome-nature.xml.in.in:
	* tiles/gnome-tiles.xml.in.in:
	* tiles/pattern-clouds.svg:
	* tiles/pattern-stars.svg:
	* translucent/gnome-translucent.xml.in.in:

	- Updated colours and other tweaks to patterns
	- Use zoom option for images

2006-02-11  Thomas Wood  <thos@gnome.org>

	* AUTHORS:
	* translucent/ellipsis.svg:

	Updated svg from Lapo Calamandrei <lapo@it.gnome.org>

2006-01-30  Thomas Wood  <thos@gnome.org>

	* NEWS: Updated for 2.13.90

2006-01-29  Thomas Wood  <thos@gnome.org>

	* branded/GNOME-Curves.png: Added missing file to cvs (fixes bug 329009)
	* po/POTFILES.in: Add new file
	* po/POTFILES.skip: Remove deleted file
	* translucent/gnome-translucent.xml.in.in: Fix typo (fixes bug 329045)

2006-01-28  Thomas Wood  <thos@gnome.org>

	* AUTHORS:
	* Makefile.am:
	* NEWS:
	* abstract/Makefile.am:
	* abstract/due-alt.jpg:
	* abstract/due.jpg:
	* abstract/gnome-abstract.xml.in.in:
	* abstract/intenso-alt.jpg:
	* abstract/intenso.jpg:
	* abstract/onda-alt.jpg:
	* abstract/onda.jpg:
	* abstract/raggi-alt.jpg:
	* abstract/raggi.jpg:
	* abstract/scie-alt.jpg:
	* abstract/scie.jpg:
	* autogen.sh:
	* branded/GNOME-Aqua.jpg:
	* branded/GNOME-Black.jpg:
	* branded/GNOME-FraserIsland.jpg:
	* branded/GNOME-Hills.jpg:
	* branded/GNOME-Redblurred.jpg:
	* branded/GNOME-Weirdcolours.jpg:
	* branded/Makefile.am:
	* branded/gnome-branded.xml.in.in:
	* configure.in:
	* nature/FreshFlower.jpg:
	* nature/GreenMeadow.jpg:
	* nature/Makefile.am:
	* nature/OpenFlower.jpg:
	* nature/gnome-nature.xml.in.in:
	* tiles/Makefile.am:
	* tiles/alien-artifact-trans.png:
	* tiles/cow-trans.png:
	* tiles/gnome-tiles.xml.in.in:
	* tiles/greche.png:
	* tiles/leather_skin-resynth-hig.png:
	* tiles/pattern-boats.svg:
	* tiles/pattern-clouds.svg: