@@ -17,6 +17,6 @@
     <filename>@datadir@/pixmaps/backgrounds/gnome/translucent/tentacles.svg</filename>
     <options>stretched</options>
     <shade_type>solid</shade_type>
-    <pcolor>#346603</pcolor>
+    <pcolor>#366B04</pcolor>
   </wallpaper>
 </wallpapers>
