@@ -1,3 +1,12 @@
+2006-02-27  Thomas Wood  <thos@gnome.org>
+
+	* tiles/gnome-tiles.xml.in.in:
+	* tiles/pattern-stars.svg:
+	* translucent/gnome-translucent.xml.in.in:
+	* translucent/tentacles.svg:
+
+	Updates from Lapo Calamandrei
+
 2006-02-25  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
 	* configure.in: Added "zh_HK" to ALL_LINGUAS.
